fix multiple layout issues

--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -11,7 +11,7 @@
     </div>
     <div class="" flex></div>
     <div class="">
-        <user-auth-logout style="icon"></user-auth-logout>
+        <!-- <user-auth-logout style="icon"></user-auth-logout> -->
     </div>
 </md-toolbar>
 <div ui-view layout="column" flex>
