--- a/client/src/core/Credits/AddCredits/AddCreditsDialog.html
+++ b/client/src/core/Credits/AddCredits/AddCreditsDialog.html
@@ -1,7 +1,4 @@
-<div layout="column" flex>
-    <md-toolbar class="md-primary md-padding" layout="row" flex="none">
-        <!-- title -->
-    </md-toolbar>
+<md-dialog id="addCredits-dialog">
     <md-content class="md-padding" flex>
         <!-- content -->
         <h3>add more credits</h3>
