--- a/client/src/core/customers/Waivers/Waivers.html
+++ b/client/src/core/customers/Waivers/Waivers.html
@@ -1,8 +1,6 @@
-<md-content layout="column" flex>
+<md-content flex>
     <waiver-display
         ng-repeat="waiver in $ctrl.waivers"
-        waiver="waiver"
-        layout="column"
-        flex>
+        waiver="waiver">
     </waiver-display>
 </md-content>
