--- a/client/src/core/customers/customersList/customersList.html
+++ b/client/src/core/customers/customersList/customersList.html
@@ -5,7 +5,8 @@
                 <tr>
                     <th colspan="4">
                         <div class="fixed-top" layout="row" flex layout-align="start center">
-                            <div class="" flex>customers {{$ctrl.customers.length}}</div>
+                            <div class="" flex>customers
+                                {{$ctrl.customers.length}}</div>
                             <md-icon md-svg-src="magnify"></md-icon>
                             <md-input-container class="md-block">
                                 <input st-search="" class="form-control" placeholder="" type="text"/>
@@ -30,5 +31,6 @@
                 </tr>
             </tbody>
         </table>
+
     </md-content>
 </div>
