--- a/client/src/client/customersForm/customersForm.html
+++ b/client/src/client/customersForm/customersForm.html
@@ -44,7 +44,7 @@
                 </md-input-container>
                 <md-input-container class="md-subhead">
                     <label>Email</label>
-                    <input ng-focus="$ctrl.inputOnFocus($event)" required type="email" name="email" ng-model="$ctrl.customer.email" ng-blur="$ctrl.updateProgressVal()"></input>
+                    <input required type="email" name="email" ng-model="$ctrl.customer.email" ng-blur="$ctrl.updateProgressVal()"></input>
                 </md-input-container>
             </div>
         </section>
