--- a/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.html
+++ b/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.html
@@ -3,14 +3,12 @@
         <div class="md-headline">{{$ctrl.dateStrtoObj(date) | date:'yyyy-MM-dd'}}</div>
         <md-divider ng-if="!$last"></md-divider>
         <md-grid-list md-cols="4" md-gutter="1em" md-row-height="1:1">
-            <md-grid-tile class="tile-gallery-img"
-                ng-repeat="url in arr">
+            <md-grid-tile class="tile-gallery-img" ng-repeat="url in arr">
                 <img ng-src="{{url}}" ng-click="$ctrl.toggleLargePic(url)"/>
             </md-grid-tile>
         </md-grid-list>
     </div>
-    <div id="preview-large" layout="row" layout-align="center center" class="hide" ng-click="$ctrl.toggleLargePic()">
-        <img ng-src="{{$ctrl.previewLargeUrl}}" alt=""  />
+    <div id="preview-large" class="hide" layout="row" layout-align="center center" ng-click="$ctrl.toggleLargePic()">
+        <img ng-src="{{$ctrl.previewLargeUrl}}" alt=""/>
     </div>
-
 </div>
