--- a/client/src/client/petsForm/petsForm.html
+++ b/client/src/client/petsForm/petsForm.html
@@ -85,6 +85,7 @@
             </md-input-container>
             <md-input-container flex>
                 <label>Birthday</label>
+                <!-- <input type="date" ng-model="$ctrl.pet.birthday" aria-label="pet-weight"> -->
                 <md-datepicker md-open-on-focus ng-model="$ctrl.pet.birthday" md-max-date="$ctrl.birthdayLimit.max" md-placeholder="birthday"></md-datepicker>
             </md-input-container>
         </div>
