update customer history and query

--- a/client/src/core/customers/customerDetailDialog.html
+++ b/client/src/core/customers/customerDetailDialog.html
@@ -22,9 +22,9 @@
                     <customer-pets pets="$ctrl.customer.pets" layout="column" flex></customer-pets>
                 </md-content>
             </md-tab>
-            <md-tab label="transactions">
+            <md-tab label="history">
                 <md-content class="md-padding">
-                    <customer-transactions customer-id="$ctrl.customer._id" layout="column" flex></customer-transactions>
+                    <customer-history customer-id="$ctrl.customer._id" layout="column" flex></customer-history>
                 </md-content>
             </md-tab>
             <md-tab label="credits">
